--- a/apps/subgraph/templates/subgraph.template.yaml
+++ b/apps/subgraph/templates/subgraph.template.yaml
@@ -31,7 +31,7 @@ dataSources:
       eventHandlers:
         - event: DeployPoll(uint256,indexed uint256,indexed uint256,uint8)
           handler: handleDeployPoll
-        - event: SignUp(uint256,indexed uint256,indexed uint256,uint256,uint256)
+        - event: SignUp(uint256,indexed uint256,indexed uint256,uint256,uint256,uint256)
           handler: handleSignUp
       file: ./src/maci.ts
 templates:
@@ -54,8 +54,8 @@ templates:
         - name: Poll
           file: ./node_modules/maci-contracts/build/artifacts/contracts/Poll.sol/Poll.json
       eventHandlers:
-        - event: MergeMaciState(indexed uint256,indexed uint256)
-          handler: handleMergeMaciState
+        - event: MergeState(indexed uint256,indexed uint256)
+          handler: handleMergeState
         - event: PublishMessage((uint256[10]),(uint256,uint256))
           handler: handlePublishMessage
       file: ./src/poll.ts
