--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -34,7 +34,8 @@
     "test:processMessages": "pnpm run mocha-test ts/__tests__/ProcessMessages.test.ts",
     "test:tallyVotes": "pnpm run mocha-test ts/__tests__/TallyVotes.test.ts",
     "test:ceremonyParams": "pnpm run mocha-test ts/__tests__/CeremonyParams.test.ts",
-    "test:incrementalQuinaryTree": "pnpm run mocha-test ts/__tests__/IncrementalQuinaryTree.test.ts"
+    "test:incrementalQuinaryTree": "pnpm run mocha-test ts/__tests__/IncrementalQuinaryTree.test.ts",
+    "test:pollJoining": "pnpm run mocha-test ts/__tests__/PollJoining.test.ts"
   },
   "dependencies": {
     "@zk-kit/circuits": "^0.4.0",
