--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "maci-crypto": "^2.5.0",
-    "maci-domainobjs": "^2.5.0"
+    "maci-domainobjs": "^2.5.0",
+    "@zk-kit/lean-imt": "^2.2.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.11",
