feat(scripts): add MACI key generation script     - Add generateMaciKeys.js script     - Update package.json with new script command     - Update .gitignore to exclude maci-keys directory

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,6 @@ packages/cli/contractAddresses.old.json
 packages/circuits/circom/test
 
 **/ts/__benchmarks__/results/**
+
+# MACI keys
+maci-keys/
