--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "test": "lerna run test --ignore maci-integrationtests --ignore maci-cli",
     "types": "lerna run types",
     "docs": "lerna run docs",
-    "prepare": "is-ci || husky"
+    "prepare": "is-ci || husky",
+    "generate-maci-keys": "node scripts/generateMaciKeys.js"
   },
   "author": "PSE",
   "devDependencies": {
