--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -170,6 +170,7 @@
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.1.0",
     "@openzeppelin/merkle-tree": "^1.0.7",
+    "@pcd/util": "^0.8.0",
     "circomlibjs": "^0.1.7",
     "ethers": "^6.13.4",
     "hardhat": "^2.22.15",
