feat: separate gen proofs and submit tasks

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -67,6 +67,7 @@
     "verify": "hardhat verify-full",
     "merge": "hardhat merge",
     "prove": "hardhat prove",
+    "submitOnChain": "hardhat submitOnChain",
     "benchmark": "hardhat benchmark",
     "deploy:localhost": "pnpm run deploy",
     "deploy:sepolia": "pnpm run deploy --network sepolia",
@@ -124,12 +125,25 @@
     "prove:gnosis-chiado": "pnpm run prove --network gnosis_chiado",
     "prove:polygon": "pnpm run prove --network polygon",
     "prove:polygon-amoy": "pnpm run prove --network polygon_amoy",
+    "submitOnChain:localhost": "pnpm run submitOnChain --network localhost",
+    "submitOnChain:sepolia": "pnpm run submitOnChain --network sepolia",
+    "submitOnChain:optimism-sepolia": "pnpm run submitOnChain --network optimism_sepolia",
+    "submitOnChain:optimism": "pnpm run submitOnChain --network optimism",
+    "submitOnChain:scroll": "pnpm run submitOnChain --network scroll",
+    "submitOnChain:scroll-sepolia": "pnpm run submitOnChain --network scroll_sepolia",
+    "submitOnChain:arbitrum": "pnpm run submitOnChain --network arbitrum",
+    "submitOnChain:arbitrum-sepolia": "pnpm run submitOnChain --network arbitrum_sepolia",
+    "submitOnChain:base": "pnpm run submitOnChain --network base",
+    "submitOnChain:base-sepolia": "pnpm run submitOnChain --network base_sepolia",
+    "submitOnChain:gnosis": "pnpm run submitOnChain --network gnosis",
+    "submitOnChain:gnosis-chiado": "pnpm run submitOnChain --network gnosis_chiado",
+    "submitOnChain:polygon": "pnpm run submitOnChain --network polygon",
+    "submitOnChain:polygon-amoy": "pnpm run submitOnChain --network polygon_amoy",
     "verify:sepolia": "pnpm run verify --network sepolia",
     "verify:optimism-sepolia": "pnpm run verify --network optimism_sepolia",
     "verify:optimism": "pnpm run verify --network optimism",
     "verify:scroll": "pnpm run verify --network scroll",
     "verify:scroll-sepolia": "pnpm run verify --network scroll_sepolia",
-    "verify:arbitrum": "pnpm run verify --network arbitrum",
     "verify:arbitrum-sepolia": "pnpm run verify --network arbitrum_sepolia",
     "verify:base": "pnpm run verify --network base",
     "verify:base-sepolia": "pnpm run verify --network base_sepolia",
