--- a/apps/subgraph/templates/subgraph.template.yaml
+++ b/apps/subgraph/templates/subgraph.template.yaml
@@ -33,7 +33,7 @@ dataSources:
       eventHandlers:
         - event: DeployPoll(uint256,indexed uint256,indexed uint256,uint8)
           handler: handleDeployPoll
-        - event: SignUp(uint256,indexed uint256,indexed uint256,uint256,uint256,uint256)
+        - event: SignUp(uint256,uint256,indexed uint256,indexed uint256)
           handler: handleSignUp
       file: ./src/maci.ts
 templates:
