refactor: sdk functions for poll and verification

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -54,6 +54,7 @@
     "maci-core": "^2.5.0",
     "maci-crypto": "^2.5.0",
     "maci-domainobjs": "^2.5.0",
+    "maci-sdk": "^0.0.1",
     "prompt": "^1.3.0"
   },
   "devDependencies": {
