--- a/apps/relayer/.env.example
+++ b/apps/relayer/.env.example
@@ -5,6 +5,12 @@ LIMIT=10
 # Coordinator RPC url
 RELAYER_RPC_URL=http://localhost:8545
 
+# MongoDB configuration
+MONGO_DB_URI=mongodb://localhost
+MONGODB_USER=maci
+MONGODB_PASSWORD=
+MONGODB_DATABASE=maci-relayer
+
 # Allowed origin host, use comma to separate each of them
 ALLOWED_ORIGINS=
 
