--- a/apps/relayer/package.json
+++ b/apps/relayer/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@nestjs/common": "^10.4.7",
     "@nestjs/core": "^10.4.7",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.4.7",
     "@nestjs/platform-socket.io": "^10.3.10",
     "@nestjs/swagger": "^8.0.3",
@@ -42,6 +43,7 @@
     "helmet": "^8.0.0",
     "maci-contracts": "workspace:^2.5.0",
     "maci-domainobjs": "workspace:^2.5.0",
+    "mongoose": "^8.9.3",
     "mustache": "^4.2.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -57,6 +59,7 @@
     "@types/supertest": "^6.0.2",
     "fast-check": "^3.23.1",
     "jest": "^29.5.0",
+    "mongodb-memory-server": "^10.1.3",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "typescript": "^5.7.2"
