--- a/apps/relayer/tsconfig.json
+++ b/apps/relayer/tsconfig.json
@@ -4,15 +4,10 @@
     "outDir": "./build",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["ES2023"],
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
-    "target": "ES2022",
+    "module": "ES2022",
+    "moduleResolution": "node",
+    "target": "ES2021",
     "forceConsistentCasingInFileNames": true
-  },
-  "ts-node": {
-    "esm": true,
-    "experimentalSpecifierResolution": "node"
   },
   "include": ["./ts", "./scripts", "./tests"],
   "files": ["./hardhat.config.cjs"]
