--- a/apps/relayer/package.json
+++ b/apps/relayer/package.json
@@ -44,6 +44,7 @@
     "hardhat": "^2.22.18",
     "helia": "^5.2.0",
     "helmet": "^8.0.0",
+    "lodash": "^4.17.21",
     "maci-contracts": "workspace:^2.5.0",
     "maci-domainobjs": "workspace:^2.5.0",
     "mongoose": "^8.9.5",
@@ -60,6 +61,7 @@
     "@nestjs/testing": "^11.0.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "fast-check": "^3.23.2",
