--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -30,26 +30,20 @@
     "docs": "typedoc --plugin typedoc-plugin-markdown --options ./typedoc.json"
   },
   "dependencies": {
-    "@commander-js/extra-typings": "^12.1.0",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "commander": "^12.1.0",
-    "dotenv": "^16.4.5",
     "ethers": "^6.13.4",
-    "hardhat": "^2.22.8",
     "maci-contracts": "^2.5.0",
-    "maci-crypto": "^2.5.0"
+    "maci-crypto": "^2.5.0",
+    "maci-domainobjs": "^2.5.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.9",
     "@types/chai-as-promised": "^7.1.8",
     "@types/mocha": "^10.0.8",
     "@types/node": "^22.9.0",
-    "@types/snarkjs": "^0.7.8",
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.2",
     "mocha": "^10.7.3",
     "nyc": "^17.1.0",
-    "snarkjs": "^0.7.5",
     "ts-mocha": "^10.0.0",
     "typescript": "^5.6.3"
   },
